Bug 955860.  Implement the CSS.escape API for escaping CSS identifiers from script.  r=bzbarsky